docker files added

--- a/frontend/src/app/components/partials/main-screen/main-screen.component.html
+++ b/frontend/src/app/components/partials/main-screen/main-screen.component.html
@@ -5,7 +5,7 @@
         <!-- Logo -->
         <img src="../../../../assets/images/logo-autotechagil-rgb.png" alt="Logo" class="logo">
 
-        <div class="dropdown-container" tabindex="0" (blur)="showDropdownCreate = false" *ngIf="selectedArchitecture?.id !== 0">
+        <div class="dropdown-container" tabindex="0" (blur)="showDropdownCreate = false">
             <div class="dropdown-display" (click)="toggleDropdownCreate()">
                 {{ 'Create' }}
             </div>
