--- a/frontend/src/app/components/partials/create-hardware-dialog/create-hardware-dialog.component.scss
+++ b/frontend/src/app/components/partials/create-hardware-dialog/create-hardware-dialog.component.scss
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.5); 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -36,7 +36,7 @@
     color: #555;
   }
 
-  .property {
+  .property { 
     display: grid;
     grid-template-columns: 20% 80%;
     justify-content: flex-start;
@@ -53,11 +53,6 @@
     transition: border-color 0.3s ease;
   }
   
-  .input-name::placeholder,
-  .textarea-description::placeholder { 
-    color: #aaa;
-  }
-  
   .input-name:focus,
   .textarea-description:focus {
     outline: none;
@@ -71,13 +66,14 @@
 
   .textarea-description {
     width: 60%;
-    height: 400px;
+    height: 330px;
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 6px;
     font-size: 16px;
     transition: border-color 0.3s ease;
+    resize: none;
   }
   
   .dialog-close-button {
