--- a/frontend/src/app/components/partials/main-screen/main-screen.component.html
+++ b/frontend/src/app/components/partials/main-screen/main-screen.component.html
@@ -1,9 +1,10 @@
-<!-- main-screen.component.html -->
-
 <header class="header">
     <div class="header-left"> 
-        <!-- Logo -->
-        <img src="../../../../assets/images/logo-autotechagil-rgb.png" alt="Logo" class="logo">
+        <!-- Logo --> 
+         <div>
+            <img src="../../../../assets/images/logo.png" alt="Logo" class="logo">
+         </div>
+        
 
         <div class="dropdown-container" tabindex="0" (blur)="showDropdownCreate = false">
             <div class="dropdown-display" (click)="toggleDropdownCreate()">
@@ -29,42 +30,38 @@
         </div>
 
         <!-- Search Field with Magnifier Icon -->
-        <div class="search-box">
+        <!--<div class="search-box">
             <input type="text" placeholder="Search" class="search-field">
             <i class="fas fa-search magnifier-icon"></i>
-        </div>
+        </div>-->
     </div>
 
 
     <div class="header-right">
 
-        <!-- <button class="generate-button" (click)="updateCurrentState()">Save</button>
-        Generate Button -->
-        <button class="generate-button">Generate</button>
+        <button class="generate-button" (click)="generateToken()">Generate</button>
 
         <!-- User Logo -->
-        <div *ngIf="userImage; else defaultLogo">
+        <!--<div *ngIf="userImage; else defaultLogo">
             <img src="{{ userImage }}" alt="User" class="user-image">
         </div>
           
         <ng-template #defaultLogo>
             <div class="user-logo">{{ userName ? (userName[0] | uppercase) : 'U' }}</div>
-        </ng-template>
+        </ng-template>-->
     </div>
 </header>
   
-    <!-- Your draggable items will go here                                             start of the main-->
 <div class="main-screen">
     <div class="horisontal-wrapper">
         <div class="start-screen" *ngIf="selectedArchitecture?.id === 0">
             <p>Please, select an Architecture from the list above!</p>
         </div>
-        
 
-        <div class="zoom-buttons-wrapper">
+       <!-- <div class="zoom-buttons-wrapper">
             <button class="zoomButton" (click)="zoomIn()">+</button>
             <button class="zoomButton" (click)="zoomOut()">-</button>
-        </div>
+        </div>-->
 
         <div *ngIf="selectedArchitecture?.id !== 0" class="architecture-details-button-wrapper">
             <button class="architecture-details-button" (click)="openArchitectureDetails()">
@@ -89,15 +86,11 @@
                         <div class="ecu">
                             <div class="label-draggable-item">{{ item.label + "|" + item.id}}</div>
                             <div class="content-draggable-item">{{ servicesCountMap.get(item.id) || 0 }} Services</div> <!--number of services-->
-                            <!--<div class="content-draggable-item">{{servicesNumber[item.connectedTo]}} Services</div>-->
                         </div>
                     </ng-container>
                     <ng-container *ngIf="item.type == 'BUS'"> 
                         <div class="label-bus">{{ item.label + "|" + item.id}}</div>
                         <div class="bus">
-                            
-                            <!--<div class="content-bus">{{ servicesCountMap.get(item.id) || 0 }} Services</div>-->
-                            <!--<div class="content-draggable-item">{{servicesNumber[item.connectedTo]}} Services</div>-->
                         </div>
                     </ng-container>
                     <!--<ng-container *ngIf="item.type == 'CAN'">
@@ -144,7 +137,7 @@
 
 <footer class="footer">
     <div class="footer-content">
-        © 2023 AUTOtech.agil
+        © 2024 Architecture Platform for Designing Secure Automotive Systems
     </div>
 </footer>
     
