--- a/frontend/src/app/components/partials/main-screen/main-screen.component.scss
+++ b/frontend/src/app/components/partials/main-screen/main-screen.component.scss
@@ -268,7 +268,12 @@ $FooterPadding: 10px;
   align-items: center;
 }
 
-.logo, .user-logo {
+.logo {
+  height: 48px; /* Adjust as per your logo size */
+  margin-right: 20px;
+}
+
+.user-logo {
   height: 50px; /* Adjust as per your logo size */
   margin-right: 20px;
 }
