generation of the tocken full

--- a/frontend/src/app/components/partials/create-hardware-dialog/create-hardware-dialog.component.html
+++ b/frontend/src/app/components/partials/create-hardware-dialog/create-hardware-dialog.component.html
@@ -20,7 +20,7 @@
             </div>
             <div class="property">
                 <h2>Name*: </h2>
-                <input class="input-name" type="text" placeholder="ECU Name" [(ngModel)]="newHardwareName">
+                <input class="input-name" type="text" placeholder="Hardware name" [(ngModel)]="newHardwareName">
             </div>
             
             <div class="property">
