--- a/frontend/src/app/components/partials/create-architecture/create-architecture.component.html
+++ b/frontend/src/app/components/partials/create-architecture/create-architecture.component.html
@@ -6,7 +6,7 @@
             <h3> Create Architecture</h3>
             <div class="property"> 
                 <h2>Name*: </h2>
-                <input class="input-name" type="text" placeholder="ECU Name" [(ngModel)]="newArchitectureName">
+                <input class="input-name" type="text" placeholder="Architecture name" [(ngModel)]="newArchitectureName">
             </div>
                 
             <div class="property">
