--- a/frontend/src/app/components/partials/data-stream-dialog/data-stream-dialog.component.html
+++ b/frontend/src/app/components/partials/data-stream-dialog/data-stream-dialog.component.html
@@ -53,8 +53,8 @@
                 </ng-container>
             </div>
 
-            <h4 class="data-stream-properties-header">Connected from: {{ dataStreamsData.selectedDataStream.connectedFrom }}</h4>
-            <h4 class="data-stream-properties-header">Connected to: {{ dataStreamsData.selectedDataStream.connectedTo }}</h4>
+           <!-- <h4 class="data-stream-properties-header">Connected from: {{ dataStreamsData.selectedDataStream.connectedFrom }}</h4>
+            <h4 class="data-stream-properties-header">Connected to: {{ dataStreamsData.selectedDataStream.connectedTo }}</h4>-->
               
             <div class="horisontal-container">
                 <h4 class="data-stream-properties-header">Two way connection: </h4>
