--- a/frontend/src/app/components/partials/ecu-dialog/ecu-dialog.component.html
+++ b/frontend/src/app/components/partials/ecu-dialog/ecu-dialog.component.html
@@ -24,7 +24,7 @@
                 </ng-container>
                 
                 <div class="toServices-wrapper" *ngIf="selectedEcu.type == 'ECU'">
-                    <button class="green-button" (click)="openDialog()">To Services</button>
+                    <button class="green-button" (click)="openDialog()">To Software View</button>
                 </div>
             </div>
             <div>
