--- a/frontend/src/app/components/partials/bus-dialog/bus-dialog.component.html
+++ b/frontend/src/app/components/partials/bus-dialog/bus-dialog.component.html
@@ -3,9 +3,9 @@
         <button class="dialog-close-button" (click)="close()">Close</button> <!-- Move close button here -->
         <div *ngIf="dialogData.selectedConnection">
             <h3>{{ dialogData.selectedConnection.name }}</h3>
-            <h4>Description: {{ dialogData.selectedConnection.description}}</h4>
-            <h4>Connected from: {{ dialogData.selectedConnection.connectedFrom }}</h4>
-            <h4>Connected to: {{ dialogData.selectedConnection.connectedTo }}</h4>
+            <!--<h4>Description: {{ dialogData.selectedConnection.description}}</h4>-->
+            <!--<h4>Connected from: {{ dialogData.selectedConnection.connectedFrom }}</h4>
+            <h4>Connected to: {{ dialogData.selectedConnection.connectedTo }}</h4>-->
             <button class="dialog-delete-button" (click)="delete()">Delete</button> <!-- Move close button here -->
         </div>
     </div>
