--- a/frontend/src/app/components/partials/bus-dialog/bus-dialog.component.scss
+++ b/frontend/src/app/components/partials/bus-dialog/bus-dialog.component.scss
@@ -91,18 +91,21 @@
 
 
   .dialog-delete-button {
-    padding: 12px 24px;
+    position: absolute;
+    bottom: 10px;
+    padding: 10px 20px;
     border-radius: 6px;
     cursor: pointer;
-    //transition: background-color 0.3s ease;
     background-color: white;
     border: 2px solid #801D1A;
+    font-size: 1rem;
   }
-
-  .dialog-delete-button:hover{
+  
+  .dialog-delete-button:hover {
     background-color: #e3a3a9;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   }
-
+  
   .dialog-delete-button:active {
     background-color: #801D1A;
     color: white;
@@ -171,20 +174,25 @@
   //---------------------------------------------
   .dialog-close-button {
     position: absolute;
-    top: 10px;
-    right: 10px;
-    padding: 12px 24px;
-    border-radius: 6px;
-    cursor: pointer;
-    //transition: background-color 0.3s ease;
+    top: 5px;
+    right: 20px;
     background-color: white;
     border: 2px solid #801D1A;
+    font-size: 1rem;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    padding: 10px 20px;
+    z-index: 10;
   }
-
-  .dialog-close-button:hover{
+  
+  
+  
+  .dialog-close-button:hover {
     background-color: #e3a3a9;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   }
-
+  
   .dialog-close-button:active {
     background-color: #801D1A;
     color: white;
