--- a/frontend/src/app/components/partials/create-data-stream-dialog/create-data-stream-dialog.component.html
+++ b/frontend/src/app/components/partials/create-data-stream-dialog/create-data-stream-dialog.component.html
@@ -1,11 +1,11 @@
 <div class="dialog-container">
     <div class="dialog-content">
         <button class="dialog-close-button" (click)="close()">Close</button>
-            <h3> Create Service</h3>
+            <h3> Create Data Stream</h3>
 
             <div class="property">
                 <h2>Name*: </h2>
-                <input class="input-name" type="text" placeholder="Service Name" [(ngModel)]="newDataStreamName">
+                <input class="input-name" type="text" placeholder="Data Stream Name" [(ngModel)]="newDataStreamName">
             </div>
             
             <div class="property">
